[package]
name = "captcha_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "captcha_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module"] }
captcha-rs = "0.2.6"
